--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <p><del>icone</del></p>
           <nav>
-           <a href="index.html">Inicio</a>
+           <a href="https://antonioviniciusa.github.io/Previnir-hipertencao/Index.html">Inicio</a>
            
            <a href="#Pressão">Pressão</a>
            <a href="#videos">Videos</a>
-           <a href="formulario.html">Formulario</a>
+           <a href="https://antonioviniciusa.github.io/Previnir-hipertencao/formulario.html">Formulario</a>
     </header>
     <div id="Inicio">
     <Div class="firstcontanier">
