--- a/formulario.html
+++ b/formulario.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-         <p>8</p>
+         <p>-</p>
           <nav>
-           <a href="/Index.html">Inicio</a>
-           <a href="/formulario.html">Formulario</a>
+           <a href="https://antonioviniciusa.github.io/Previnir-hipertencao/index.html">Inicio</a>
+           <a href="https://antonioviniciusa.github.io/Previnir-hipertencao/formulario.html">Formulario</a>
     </header>
     <body>
-        <form action="/Resposta.php" method="get">
+        <form action="https://antonioviniciusa.github.io/Previnir-hipertencao/Resposta.php" method="get">
             <h1>Sitomas de Pressão alta</h1>
             <label for="nome">Nome:</label>
             <input type="text" name="nome" id="inome" placeholder="Digite seu Nome">
@@ -79,7 +79,7 @@
         <h4>PARA MAIS INFORMAÇÕES: <br>
             EXEMPLODEEMAIL@GMAIL.COM</h4>   
             
-            <div class="icone"><img class="icone" src="/img/Coraçãoicone.png" alt="" ><br><h5><i>www.exemplolink.com.br</i></h5></div>
+            <div class="icone"><img class="icone" src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Coraçãoicone.png" alt="" ><br><h5><i>www.exemplolink.com.br</i></h5></div>
         <h4><b>CUIDAR DO CORAÇÃO
             TAMBEM É SE AMAR!</b></h4>
             <div class="cp"><sub>Copyright©</sub></div>
