--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
     <div id="Inicio">
     <Div class="firstcontanier">
-        <img src="/img/Hipertenção.png" alt="Imagem do dia mundial da Hipertensão">
+        <img src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Hipertenção.png" alt="Imagem do dia mundial da Hipertensão">
     </Div>   
     <div class="secondcontanier" id="Pressão">
-        <img src="/img/Pressão1.png" alt="Medidor de pressão">
+        <img src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Pressão1.png" alt="Medidor de pressão">
         <table>
             <tr>
               <th>PAD (<small>mmHg</small>)</th>
@@ -49,7 +49,7 @@
               <td>Hipertensão moderada (estágio 2)</td>
             </tr>
           </table>
-        <img src="/img/Pressão3.png" alt="Medidor de pressão e verduras">
+        <img src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Pressão3.png" alt="Medidor de pressão e verduras">
         <div class="paragrafo" id="contanier1">
         <p>A medição de pressão diaria para aconpanhamento é estritamente 
             necessaria.
@@ -74,14 +74,14 @@
     </div>
     <div class="alimentação">
         <div class="image-alimentação">
-          <img src="/img/Alimentação1.png" alt="Frutas">
+          <img src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Alimentação1.png" alt="Frutas">
           <div class="overlay">
             <p>Frutas</p>
             <button onclick="open_frutas_pop_up(),close_alimentos_processados_pop_up(),close_sal_pop_up()">Saiba Mais</button>
           </div>
         </div>
         <div class="image-alimentação">
-          <img  src="/img/Alimentação2.png" alt="alimentos processados em pratileira">
+          <img  src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Alimentação2.png" alt="alimentos processados em pratileira">
           <div class="overlay">
             <p>Alimentos processados</p>
             <button onclick="open_alimentos_processados_pop_up(),close_frutas_pop_up(),close_sal_pop_up()">Saiba Mais</button>
@@ -106,7 +106,7 @@
     <h4>PARA MAIS INFORMAÇÕES: <br>
         EXEMPLODEEMAIL@GMAIL.COM</h4>   
         
-        <div class="icone"><img class="icone" src="/img/Coraçãoicone.png" alt="" ><br><h5><i>www.exemplolink.com.br</i></h5></div>
+        <div class="icone"><img class="icone" src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Coraçãoicone.png" alt="" ><br><h5><i>www.exemplolink.com.br</i></h5></div>
     <h4><b>CUIDAR DO CORAÇÃO
         TAMBEM É SE AMAR!</b></h4>
         <div class="cp"><sub>Copyright©</sub></div>
