--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
       </div>
         <div class="image-alimentação">
-          <img src="/img/Alimentação3.png" alt="pote de Sal">
+          <img src="https://antonioviniciusa.github.io/Previnir-hipertencao/img/Alimentação3.png" alt="pote de Sal">
           <div class="overlay">
             <p>Sal</p>
             <button onclick="open_sal_pop_up(),close_alimentos_processados_pop_up(),close_frutas_pop_up()">Saiba Mais</button>
